<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    xmlns:app="http://schemas.android.com/apk/res/com.malabon.pos"
	    tools:context=".AddPayment"
        android:id="@+id/Wrapper"
        style="@style/popup"
        android:layout_width="550dp" >

        <android.support.v7.widget.GridLayout
            style="@style/wrapper_grid_common"
            app:columnCount="2"
            app:rowCount="5" >
            
            <TextView
	            android:text="@string/AddPayment"
	            style="@style/H2"
	            app:layout_row="0"
	            app:layout_column="0"
	            app:layout_columnSpan="2" />
            
            <TextView                
                android:text="@string/Amount"
                style="@style/field_label"
                app:layout_row="1"
	            app:layout_column="0"
	            app:layout_gravity="right" />
            
           <EditText
               android:id="@+id/txtCashEnteredAmount"
               style="@style/textbox_numeric"
               android:layout_width="wrap_content"
               app:layout_column="1"
               app:layout_gravity="fill_horizontal"
               app:layout_row="1" >

            </EditText>
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_row="2"
	            app:layout_column="0"
	            android:padding="20dp" >

                <Button
                    android:text="@string/Confirm" 
                    style="@style/btn_green_small"
                    android:onClick="confirm" />

                <Button
                    android:text="@string/Cancel"
                    style="@style/btn_red_small"
                    android:onClick="cancel" />

            </LinearLayout>
            
            <android.support.v7.widget.GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:columnCount="3"
                app:rowCount="4"
                app:layout_row="2"
	            app:layout_column="1"
	            android:padding="20dp">
			
                <Button
                    android:id="@+id/btn7n"
                    style="@style/btn_gray_fit"
                    android:text="@string/seven"
                    app:layout_row="0"
	            	app:layout_column="0" 
	            	android:onClick="clickNumber" />

                <Button
                    android:id="@+id/btn4n"
                    style="@style/btn_gray_fit"
                    android:text="@string/four"
                    app:layout_row="1"
	            	app:layout_column="0" 
	            	android:onClick="clickNumber" />

                <Button
                    android:id="@+id/btn1n"
                    style="@style/btn_gray_fit"
                    android:text="@string/one"
                    app:layout_row="2"
	            	app:layout_column="0" 
	            	android:onClick="clickNumber" />

                <Button
                    android:id="@+id/btnClr"
                    style="@style/btn_gray_fit"
                    android:text="@string/C"
                    app:layout_row="3"
	            	app:layout_column="0" 
	            	android:onClick="clickNumber" />
                
                <Button
                    android:id="@+id/btn8n"
                    style="@style/btn_gray_fit"
                    android:text="@string/eight"
                    app:layout_row="0"
	            	app:layout_column="1" 
	            	android:onClick="clickNumber" />

                <Button
                    android:id="@+id/btn5n"
                    style="@style/btn_gray_fit"
                    android:text="@string/five"
                    app:layout_row="1"
	            	app:layout_column="1" 
	            	android:onClick="clickNumber" />

                <Button
                    android:id="@+id/btn2n"
                    style="@style/btn_gray_fit"
                    android:text="@string/two"
                    app:layout_row="2"
	            	app:layout_column="1" 
	            	android:onClick="clickNumber" />

                <Button
                    android:id="@+id/btn0n"
                    style="@style/btn_gray_fit"
                    android:text="@string/zero"
                    app:layout_row="3"
	            	app:layout_column="1" 
	            	android:onClick="clickNumber" />
                
                <Button
                    android:id="@+id/btn9n"
                    style="@style/btn_gray_fit"
                    android:text="@string/nine"
                    app:layout_row="0"
	            	app:layout_column="2" 
	            	android:onClick="clickNumber" />

                <Button
                    android:id="@+id/btn6n"
                    style="@style/btn_gray_fit"
                    android:text="@string/six"
                    app:layout_row="1"
	            	app:layout_column="2" 
	            	android:onClick="clickNumber" />

                <Button
                    android:id="@+id/btn3n"
                    style="@style/btn_gray_fit"
                    android:text="@string/three"
                    app:layout_row="2"
	            	app:layout_column="2" 
	            	android:onClick="clickNumber" />

                <ImageButton
                    android:id="@+id/bntBackspace"
                    style="@style/btn_gray_fit"
                    android:layout_width="37dp"
                    android:layout_height="60dp"
                    app:layout_column="2"
                    app:layout_row="3"
                    android:src="@android:drawable/ic_input_delete" 
                    android:contentDescription="@string/imagedesc"
                    android:onClick="clickNumber" />
			
			</android.support.v7.widget.GridLayout>
			            
           
        </android.support.v7.widget.GridLayout>

    </LinearLayout>