    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    xmlns:app="http://schemas.android.com/apk/res/com.malabon.pos"
	    tools:context=".Functions"
        android:id="@+id/Wrapper"
        style="@style/popup"
        android:layout_width="wrap_content" >

        <android.support.v7.widget.GridLayout
            style="@style/wrapper_grid_common"
            app:columnCount="2"
            app:rowCount="5" >

            <TextView
                style="@style/H1"
                app:layout_column="0"
                app:layout_columnSpan="2"
                app:layout_row="0"
                android:text="@string/Functions" /> 
            
            <Button
                android:text="@string/CashInOut"
                android:onClick="cashInOut"
                style="@style/btn_orange_small"
                app:layout_column="0"
                app:layout_row="1" />
            
            <Button
                android:text="@string/Sync"
                android:onClick="sync"
                style="@style/btn_orange_small"
                app:layout_column="1"
                app:layout_row="1" />
            
            <Button
                android:text="@string/Cancel"
                android:onClick="cancel"
                style="@style/btn_red_small"
                app:layout_column="0"
                app:layout_row="2" />

            <Button
                android:text="@string/CloseDay"
                android:onClick="closeDay"
                style="@style/btn_orange_small"
                app:layout_column="1"
                app:layout_row="2" />
            
        </android.support.v7.widget.GridLayout>
    </LinearLayout>