<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.malabon.pos"
    android:id="@+id/Wrapper"
    style="@style/popup"
    android:layout_width="800dp" >

    <android.support.v7.widget.GridLayout
        style="@style/wrapper_grid_common"
        app:columnCount="2"
        app:rowCount="12" >

        <TextView
            style="@style/H1"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_row="0"
            android:text="@string/AddCustomer" />

        <TextView
            style="@style/field_label"
            app:layout_column="0"
            app:layout_row="1"
            android:text="@string/FirstName" />

        <EditText
            android:id="@+id/textFirstName"
            style="@style/textbox_common"
            app:layout_column="1"
            app:layout_row="1" />

        <TextView
            style="@style/field_label"
            app:layout_column="0"
            app:layout_row="2"
            android:text="@string/LastName" />

        <EditText
            android:id="@+id/textLastName"
            style="@style/textbox_common"
            app:layout_column="1"
            app:layout_row="2" />

        <TextView
            style="@style/field_label"
            app:layout_column="0"
            app:layout_row="3"
            android:text="@string/Address" />

        <EditText
            android:id="@+id/textAddress"
            style="@style/textbox_common"
            app:layout_column="1"
            app:layout_row="3" />

        <TextView
            style="@style/field_label"
            app:layout_column="0"
            app:layout_row="4"
            android:text="@string/AddressLandmark" />

        <EditText
            android:id="@+id/textAddressLandMark"
            style="@style/textbox_common"
            app:layout_column="1"
            app:layout_row="4" />

        <TextView
            style="@style/field_label"
            app:layout_column="0"
            app:layout_row="5"
            android:text="@string/TelNo" />

        <EditText
            android:id="@+id/textTelNo"
            style="@style/textbox_numeric"
            app:layout_column="1"
            app:layout_row="5"
            android:maxLength="10" />

        <TextView
            style="@style/field_label"
            app:layout_column="0"
            app:layout_row="6"
            android:text="@string/MobileNo" />

        <EditText
            android:id="@+id/textMobileNo"
            style="@style/textbox_numeric"
            app:layout_column="1"
            app:layout_row="6"
            android:maxLength="12" />
    </android.support.v7.widget.GridLayout>

    <LinearLayout
        android:id="@+id/add_view"
        style="@style/wrapper_horizontal"
        android:layout_gravity="right"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:weightSum="2" >

        <Button
            android:id="@+id/btnAddCustomer"
            style="@style/btn_green_150"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:onClick="addCustomer"
            android:text="@string/NewCustomer" />

        <Button
            android:id="@+id/btnAddCancel"
            style="@style/btn_red_150"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:onClick="cancel"
            android:text="@string/Cancel" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/update_view"
        style="@style/wrapper_horizontal"
        android:layout_gravity="right"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:weightSum="2" >

        <Button
            android:id="@+id/btnUpdateCustomer"
            style="@style/btn_green_150"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:onClick="updateCustomer"
            android:text="@string/SaveUpdate" />

        <Button
            android:id="@+id/btnUpdateCancel"
            style="@style/btn_red_150"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:onClick="cancel"
            android:text="@string/Cancel" />
    </LinearLayout>

</LinearLayout>