
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res/com.malabon.pos"
        android:id="@+id/Wrapper"
        style="@style/popup"
        android:layout_width="wrap_content"
        tools:context=".SaleOptions" >

        <android.support.v7.widget.GridLayout
            style="@style/wrapper_grid_common"
            app:columnCount="2"
            app:rowCount="5" >

            <TextView
                style="@style/H1"
                app:layout_column="0"
                app:layout_columnSpan="2"
                app:layout_row="0"
                android:text="@string/SaleOptions" /> 
                
            <Button
                android:text="@string/Discount"
                android:onClick="discount"
                style="@style/btn_orange_small"
                app:layout_column="0"
                app:layout_row="1" />
            
            <Button
                android:text="@string/PrintReceipt"
                android:onClick="printReceipt" 
                style="@style/btn_orange_small"
                app:layout_column="1"
                app:layout_row="1" />

            <Button
                android:text="@string/Cancel"
                android:onClick="cancel" 
                style="@style/btn_red_small"
                app:layout_column="0"
                app:layout_row="2" />           
            
            <Button
                android:text="@string/NewSale"
                android:onClick="newSale"
                style="@style/btn_green_small"
                app:layout_column="1"
                app:layout_row="2" />
            
        </android.support.v7.widget.GridLayout>
    </LinearLayout>